[package]
authors = ["Devin Sterling"]
name = "rbook"
version = "0.6.12"
rust-version = "1.88.0"
edition = "2024"
description = """
A fast, format-agnostic, ergonomic ebook library with a focus on EPUB 2 and 3.
"""
license = "Apache-2.0"
repository = "https://github.com/DevinSterling/rbook"
documentation = "https://docs.rs/rbook"
categories = ["parser-implementations"]
keywords = ["ebook", "e-book", "epub", "epub2", "epub3"]

[features]
default = ["threadsafe", "prelude"]
threadsafe = []
prelude = []

[dependencies]
thiserror = "2.0.18"
quick-xml = "0.39.0"
percent-encoding = "2.3.2"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[lints.rust]
unsafe_code = "forbid"
