[package]
authors = ["Devin Sterling"]
name = "rbook"
version = "0.7.8"
rust-version = "1.88.0"
edition = "2024"
description = """
A fast, format-agnostic, ergonomic ebook library for reading, building, and editing EPUB 2 and 3.
"""
license = "Apache-2.0"
repository = "https://github.com/DevinSterling/rbook"
documentation = "https://docs.rs/rbook"
categories = ["parser-implementations", "wasm"]
keywords = ["ebook", "epub", "builder", "epub2", "epub3"]

[features]
default = ["threadsafe", "prelude", "write"]
threadsafe = []
prelude = []
write = []

[dependencies]
thiserror = "2.0.18"
percent-encoding = "2.3.2"
indexmap = "2.14.0"
quick-xml = { version = "0.40.1", features = ["escape-html"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.75"

[lints.rust]
unsafe_code = "forbid"
