[package]
authors = ["Devin Sterling"]
name = "rbook-cli"
version = "0.0.1-alpha.1"
rust-version = "1.88.0"
edition = "2024"
description = "Experimental command-line interface for rbook."
license = "Apache-2.0"
repository = "https://github.com/DevinSterling/rbook"

[[bin]]
name = "rbook"
path = "src/main.rs"

[dependencies]
rbook = { path = "..", version = "0.7.1", default-features = false }
clap = { version = "4.5.60", features = ["derive"] }
